@@ -695,6 +695,7 @@ Other memory:
 <pre><ul>
 0.3.6 2007-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>
 
+	* Changes for use with SDCC compiler
 </pre></ul>
 
 <table width ="100%">
