@@ -38,10 +38,13 @@
  ************************************************************/
 
 #include <nuttx/config.h>
+
 #include <sys/types.h>
 #include <sched.h>
 #include <debug.h>
+
 #include <nuttx/arch.h>
+
 #include "clock_internal.h"
 #include "os_internal.h"
 #include "up_internal.h"
